<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="afpcsoft.com.br.bestplaces.controller.BaseActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
    <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_add" android:title="@string/action_add"
        android:icon="@drawable/ic_action_content_add"
        android:visible="false"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_filter" android:title="@string/action_filter"
        android:icon="@drawable/ic_action_content_filter_list"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>
